--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#masters-section"class="nav-link">Мастера</a></li>
                 <li><a href="#footer"class="nav-link">Контакты</a></li>
             </ul>
-            <div>
+            <div class="btn-box">
                 <a href="tel:+380441111111" class="phone-link">+38 044 111 11 11</a>
                 <a href="#footer" class="primary-btn">онлайн-запись</a>
             </div>
@@ -156,7 +156,7 @@
             <h2 class="section-title">Наши мастера</h2>
             <ul class="maters-list">
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/Masters/img1.jpg" alt="">
                     <p>John Smith</p>
                     <span>Extreme Barber</span>
                     <div class="master-social-box"><a href="" class="master-social-link"></a>
@@ -166,7 +166,7 @@
                     </div>
                 </li>
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/Masters/img2.jpg" alt="">
                     <p>Michele Doe</p>
                     <span>Extreme Barber</span>
                     <div class="master-social-box">
@@ -177,7 +177,7 @@
                     </div>
                 </li>
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/Masters/img3.jpg" alt="">
                     <p>Alan Black</p>
                     <span>Extreme Barber</span>
                     <div class="master-social-box">
@@ -194,10 +194,10 @@
         <section class="section-box" id="">
             <span class="suptitle-primary">На латинском языке “барба” означает “борода”</span>
             <div class="image-gallery">
-                <img src="./images/Gallery/image-1.jpg" alt="Стрижка машинкой">
-                <img src="./images/Gallery/image-2.jpg" alt="Наносят пену">
-                <img src="./images/Gallery/image-3.jpg" alt="Пропаривание лица">
-                <img src="./images/Gallery/image-4.jpg" alt="Стрижка опасной бритвой">
+                <img src="./images/Gallery/Rectangle 25.jpg" alt="Стрижка машинкой">
+                <img src="./images/Gallery/Rectangle 26.jpg" alt="Наносят пену">
+                <img src="./images/Gallery/Rectangle 27.jpg" alt="Пропаривание лица">
+                <img src="./images/Gallery/Rectangle 28.jpg" alt="Стрижка опасной бритвой">
             </div>
         </section>
 
@@ -212,7 +212,7 @@
         </form>
     </div>
 
-    <div>
+    <div class="footer-contacts">
         <h2 class="section-title lighten">Контакты</h2>
         <div class="contacts-box">
             <adress>ул. Васильковая, 7А
