--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <!-- Price -->
-        <section class="section-box" id="price-section">
+        <section class="section-box why-us_section" id="price-section">
             <span class="suptitle-secondary">Проведи время в компании лучших мастеров</span>
             <h2 class="section-title lighten">Услуги и цены</h2>
             <div class="price-box">
