--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <!--Navbar-->
         <nav class="navbar">
             <div class="nav-holder">
-                <img src="./images/Logo.png" alt="Имя компании" class="logo-img">
+                <!-- <img src="./images/Logo.png" alt="Имя компании" class="logo-img"> -->
             <ul class="nav-links">
+                <svg class="logo-img">
+                    <use href='./images/Icons/sprite.svg.svg#icon-Logosvg'></use>
+                </svg>
                 <li><a href="#about-section"class="nav-link">О нас</a></li>
                 <li><a href="#price-section"class="nav-link">Услуги и цены</a></li>
                 <li><a href="#masters-section"class="nav-link">Мастера</a></li>
@@ -153,7 +156,7 @@
      </section>
 
      <!--Our masters-->
-        <section class="section-box" id="masters-section">
+        <section class="section-box master-box" id="masters-section">
             <span class="suptitle-primary">для настоящих ценителей атмосферы</span>
             <h2 class="section-title">Наши мастера</h2>
             <ul class="maters-list">
@@ -161,10 +164,27 @@
                     <img src="./images/Masters/img1.jpg" alt="">
                     <p>John Smith</p>
                     <span>Extreme Barber</span>
-                    <div class="master-social-box"><a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
+                    <div class="master-social-box">
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-instagramsvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-twittersvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-facebooksvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-linkedinsvg"></use>
+                            </svg>
+                        </a>
                     </div>
                 </li>
                 <li class="master-card">
@@ -172,10 +192,26 @@
                     <p>Michele Doe</p>
                     <span>Extreme Barber</span>
                     <div class="master-social-box">
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-instagramsvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-twittersvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-facebooksvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-linkedinsvg"></use>
+                            </svg>
+                        </a>
                     </div>
                 </li>
                 <li class="master-card">
@@ -183,10 +219,26 @@
                     <p>Alan Black</p>
                     <span>Extreme Barber</span>
                     <div class="master-social-box">
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
-                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-instagramsvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-twittersvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-facebooksvg"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="master-social-link">
+                            <svg>
+                                <use href="./images/Icons/sprite.svg.svg#icon-linkedinsvg"></use>
+                            </svg>
+                        </a>
                     </div>
                 </li>
             </ul>
